Aggiunge la struttura della sezione contact me

--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,10 @@ header {
 #about h2 {
     color: inherit;
 }
+
+/* ------------------
+    CONTACT ME  
+------------------ */
+#contact-me p {
+    color: black;
+}
