Aggiunge form da bootstrap in sezione contact-me

--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ header {
 /* ------------------
     CONTACT ME  
 ------------------ */
-#contact-me p {
-    color: black;
+#contact-me {
+    color: var(--ms-second-color);
 }
 
 /* ------------------
