--- a/css/common.css
+++ b/css/common.css
@@ -38,3 +38,17 @@ a {
     right: 0;
     transform: translateY(-50%);
 }
+.ms-circle {
+    position: relative;
+    width: 3.125rem;
+    height: 3.125rem;
+    border: 1px solid var(--ms-first-color);
+    border-radius: 50%;
+}
+.ms-circle i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5625rem;
+}
