--- a/css/utility.css
+++ b/css/utility.css
@@ -12,6 +12,7 @@
 :root {
     --ms-first-color: white;
     --ms-second-color: black;
+    --ms-third-color: #1abc9c;
 }
 /* ------------------
     COLORS-CLASS
