--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,10 @@ a {
     font-size: 2.1875rem;
     width: 30%;
 }
+
+/* ------------------
+    STAR ICONS
+------------------ */
 .ms-star-icon::before {
     content: '';
     position: absolute;
@@ -38,6 +42,10 @@ a {
     right: 0;
     transform: translateY(-50%);
 }
+
+/* ------------------
+    CIRCLE ICONS  
+------------------ */
 .ms-circle {
     position: relative;
     width: 3.125rem;
