Aggiunge classe ms-border-form per  stile del form

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import 'utility.css';
 @import 'components/ms-card.css';
+@import 'components/ms-border-form.css';
 @import 'common.css';
 @import 'typography.css';
 
